Added sources for code

--- a/NN_experiments.ipynb
+++ b/NN_experiments.ipynb
@@ -15,6 +15,12 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Sources:\n",
+    "https://towardsdatascience.com/a-practical-example-in-transfer-learning-with-pytorch-846bb835f2db\n",
+    "https://pytorch.org/tutorials/beginner/finetuning_torchvision_models_tutorial.html#load-data\n",
+    "\"\"\"\n",
+    "\n",
     "import torch\n",
     "import torch.nn.functional as Ff\n",
     "import torch.nn as nn\n",
