Added new tutorial on federated learning

--- a/NN_experiments.ipynb
+++ b/NN_experiments.ipynb
@@ -31,9 +31,10 @@
     "import os\n",
     "import copy\n",
     "\n",
-    "NUM_EPOCHS = 5\n",
-    "BATCH_SIZE = 16\n",
+    "NUM_EPOCHS = 20\n",
+    "BATCH_SIZE = 8\n",
     "NUM_WORKERS = 4\n",
+    "FEATURE_EXTRACT = True\n",
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
@@ -169,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resnet\n"
+      "VGG\n"
      ]
     },
     {
@@ -191,64 +192,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: 0.176600\n",
-      "1: 0.085800\n",
-      "2: -0.135600\n",
-      "3: 0.199900\n",
-      "4: 0.220600\n",
-      "Best accuracy: 0.220600\n",
-      "Alexnet\n",
-      "0: 0.109600\n",
-      "1: 0.116800\n",
-      "2: 0.212600\n",
-      "3: 0.104000\n",
-      "4: -0.036600\n",
-      "Best accuracy: 0.212600\n",
-      "VGG\n",
-      "0: 0.154700\n",
-      "1: 0.231000\n",
-      "2: 0.228500\n",
-      "3: 0.217600\n",
-      "4: 0.204300\n",
-      "Best accuracy: 0.231000\n",
-      "Squeezenet\n",
-      "0: -0.118700\n",
-      "1: 0.005400\n",
-      "2: 0.006000\n",
-      "3: -0.000900\n",
-      "4: 0.019600\n",
-      "Best accuracy: 0.019600\n",
-      "Densenet\n",
-      "0: 0.184600\n",
-      "1: 0.158600\n",
-      "2: 0.242800\n",
-      "3: 0.150000\n",
-      "4: 0.228400\n",
-      "Best accuracy: 0.242800\n"
+      "0: -0.017000\n",
+      "1: 0.107500\n",
+      "2: 0.006100\n",
+      "3: 0.197400\n",
+      "4: 0.173100\n",
+      "5: 0.164900\n",
+      "6: 0.244500\n",
+      "7: 0.232100\n",
+      "8: 0.227500\n"
      ]
     }
    ],
    "source": [
     "# Can use resnet, alexnet, vgg, squeezenet, or densenet\n",
-    "net = initialize_model(\"resnet\", 10, True)\n",
-    "print(\"Resnet\")\n",
-    "train_and_test(net)\n",
     "\n",
-    "net = initialize_model(\"alexnet\", 10, True)\n",
-    "print(\"Alexnet\")\n",
-    "train_and_test(net)\n",
+    "torch.cuda.empty_cache()\n",
     "\n",
-    "net = initialize_model(\"vgg\", 10, True)\n",
+    "# net = initialize_model(\"resnet\", 10, FEATURE_EXTRACT)\n",
+    "# print(\"Resnet\")\n",
+    "# train_and_test(net)\n",
+    "\n",
+    "# net = initialize_model(\"alexnet\", 10, FEATURE_EXTRACT)\n",
+    "# print(\"Alexnet\")\n",
+    "# train_and_test(net)\n",
+    "\n",
+    "net = initialize_model(\"vgg\", 10, FEATURE_EXTRACT)\n",
     "print(\"VGG\")\n",
     "train_and_test(net)\n",
     "\n",
-    "net = initialize_model(\"squeezenet\", 10, True)\n",
-    "print(\"Squeezenet\")\n",
-    "train_and_test(net)\n",
+    "# net = initialize_model(\"squeezenet\", 10, FEATURE_EXTRACT)\n",
+    "# print(\"Squeezenet\")\n",
+    "# train_and_test(net)\n",
     "\n",
-    "net = initialize_model(\"densenet\", 10, True)\n",
-    "print(\"Densenet\")\n",
-    "train_and_test(net)"
+    "# net = initialize_model(\"densenet\", 10, FEATURE_EXTRACT)\n",
+    "# print(\"Densenet\")\n",
+    "# train_and_test(net)"
    ]
   },
   {
